# werewolves

./: .gitignore  METHODOLOGIE_EVALUATION.md  README.md  analyze_results.py  app.py  game_leader.py  game_webapp.py  local_players.py  main.py  ping.py  players_config.yaml  pyproject.toml  requirements.txt  run_games.py  smoke_test.py  tools.py  werewolf.py
.github/workflows/: run-games.yml
public/: index.html  script.js  style.css
